After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761108 - uvch264_src: Fix caps memory leak
uvch264_src: Fix caps memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-01-26 00:35 UTC by Vineeth
Modified: 2016-02-17 09:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix caps memory leak (1.11 KB, patch)
2016-01-26 00:36 UTC, Vineeth
committed Details | Review

Description Vineeth 2016-01-26 00:35:09 UTC
v4l_caps and new_caps are being allocated new memory before freeing the old allocation.
There is no need to allocate the memory first time as this was never being used and reallocated again.
Comment 1 Vineeth 2016-01-26 00:36:05 UTC
Created attachment 319715 [details] [review]
fix caps memory leak
Comment 2 Vineeth 2016-02-17 06:53:36 UTC
ping :)
Comment 3 Tim-Philipp Müller 2016-02-17 09:00:54 UTC
Thanks!

commit 9900b08512492355eec6c5530889d74828635da3
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Tue Jan 26 09:34:00 2016 +0900

    uvch264_src: Fix caps memory leak
    
    v4l_caps and new_caps are being allocated new memory before freeing the
    old allocation.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=761108